# DLAP-Slides

./: .gitignore  README.md  bib.yaml  flake.nix  pyproject.toml  report.typ  report_template.typ  slides.typ  speak.md  template.typ  training_loss_graph.py
animation/: convolution.py
animation/custom/: banner.py  end_screen.py
presentation/: bib.yaml  slides.typ  template.typ
